# cca-realm-measurements

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
configs/: fvp.conf  kvm.conf  qemu-max-8.2.conf  rmm-1.0-eac5.conf
docs/: measurement-log.md  realm-vm.md  realm-vm.txt
examples/: dtb.rs  event_log.rs
rmm/: Cargo.toml
rmm/src/: lib.rs
samples/: corim-cca-realm.json
scripts/: gen-run-vmm.cfg  gen-run-vmm.sh
src/: cloud_hypervisor.rs  command_line.rs  dtb_surgeon.rs  event_log.rs  fdt.rs  kvmtool.rs  lib.rs  main.rs  qemu.rs  realm.rs  realm_comid.rs  realm_config.rs  realm_params.rs  rmm.rs  utils.rs  vmm.rs
testdata/: some-file.txt
tests/: cmdline.rs  event_log.rs
