workspace = { members = ["rmm"] }

[package]
name = "realm-token"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
rmm = { path = "rmm/" }

[lints.clippy]
# Suggestions are less readable
manual_range_contains = "allow"
