workspace = { members = ["rmm"] }

[package]
name = "realm-token"
description = "Compute the Realm Initial and Extensible Measurements for Arm CCA"
authors = ["Jean-Philippe Brucker <jean-philippe@linaro.org>"]
repository = "https://git.codelinaro.org/linaro/dcap/realm-token"
keywords = ["arm", "cca", "realm", "attestation", "confidential"]
categories = ["virtualization"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
openssl = "0.10.63"
rmm = { path = "rmm/" }
serde = "1.0.197"
toml = "0.8.10"
vm-fdt = "0.3.0"
serde_json = { version = "1.0.114" }
base64 = "0.22.1"
log = "0.4.22"
stderrlog = "0.6.0"
byteorder = "1.5.0"
num-derive = "0.3.3"
num-traits = "0.2.19"
thiserror = "1.0.64"
memmap2 = "0.9.5"
uefi-eventlog = { git = "https://github.com/jpbrucker/uefi-eventlog-rs.git" }
fallible-iterator = "0.3.0"

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
# Suggestions are less readable
manual_range_contains = "allow"
