[workspace]

[workspace.package]
authors = ["Jean-Philippe Brucker <jean-philippe@linaro.org>"]
repository = "https://github.com/veraison/cca-realm-measurements.git"
keywords = ["arm", "cca", "realm", "attestation", "confidential"]
categories = ["virtualization"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.64"

[package]
name = "cca-realm-measurements"
description = "Compute the Realm Initial and Extensible Measurements for Arm CCA"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "realm-measurements"
path = "src/main.rs"

[dependencies]
cca-rmm = { version = "0.1.0", path = "rmm/" }
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
openssl = "0.10.72"
toml = "0.8.10"
vm-fdt = { git = "https://github.com/jpbrucker/vm-fdt.git" }
serde_json = { version = "1.0.114" }
base64 = "0.22.1"
log = "0.4.22"
stderrlog = "0.6.0"
byteorder = "1.5.0"
memmap2 = "0.9.5"
uefi-eventlog = { git = "https://github.com/jpbrucker/uefi-eventlog-rs.git" }
fallible-iterator = "0.3.0"
serde.workspace = true
thiserror.workspace = true

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
# Suggestions are less readable
manual_range_contains = "allow"

[dev-dependencies]
# Used by tests/
bincode = "1.3.3"
