[package]
name = "rmm"
description = "Arm Realm Management Monitor structures"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.6.0", features = ["serde"] }
serde.workspace = true
thiserror.workspace = true
